test/sema/module_error.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

const ops = import("module_ops.dmz");

fn main() -> void {
    let x = 1;
    let y = 2;

    // CHECK: [[# @LINE + 1 ]]:8: error: module 'module_ops' has no member called 'prints'
    ops.prints(x);

    let result = ops.integer.add(x, y);
    // CHECK: [[# @LINE + 1 ]]:8: error: module 'module_ops' has no member called 'float'
    ops.float.add(x, y);
    
    ops.print(result);
}